<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SITP_DaneElementu" Id="{25ef9b19-682e-0e1c-1de1-ac49765dad87}">
    <Declaration><![CDATA[TYPE ST_SITP_DaneElementu :
STRUCT
	ePolecenieZmianyStanu			: E_SITP_PolecenieZmianyStanu;
	refbWyjdzZestanuAktywnego		: REFERENCE TO BOOL;
	ePolecenieZmianyTrybu			: E_SITP_PolecenieZmianyTrybu;
	
	
	refeAktualnyStan				: REFERENCE TO B_Baza.E_StanyPracy;
	refeaktualnyTryb				: REFERENCE TO B_Baza.E_TrybyPracy;
	
	eNowyStan						: B_Baza.E_StanyPracy;
	eNowyTryb						: B_Baza.E_TrybyPracy;
	
	arrStanyWlaczoneWTrybie						: ARRAY [0..STALE.ILOSC_STANOW_PRACY] OF BOOL;
	arrMozliwoscPrzejsciaPamiedzyTrybamiWStanie	: ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF BOOL;	//informacja dla aktualnego stanu do jakich trybów można przejść
	refarrTrybyWlaczone							: REFERENCE TO ARRAY [0..STALE.ILOSC_TRYBOW_PRACY] OF BOOL;
	
	iNumerBledu						: INT;	//informacja dla SITP żeby wystawił numer informacji o nieudanej zmianie stanu lub trybu
	bAktywnyBlad					: BOOL;
	
	refbZredukowanaLiczbaPrzyciskow	: REFERENCE TO BOOL;
	
	itfGrzybCh1						: B_Baza.ITF_FlagaOdczyt;
	itfGrzybCh2						: B_Baza.ITF_FlagaOdczyt;
	itfSS1							: B_Baza.ITF_FlagaOdczyt;
	itfSTO							: B_Baza.ITF_FlagaOdczyt;
	
	
	refarrPB						: REFERENCE TO ARRAY [0..B_Baza.STALE.MAX_ILOSC_PB] OF B_Baza.ITF_PodzespolBazowy;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>